[workspace]
members = [
    "crates/cairo",
    "crates/cli",
    "crates/server",
    "crates/db"
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0"
tempfile = "3.10.1"
hex = "0.4.3"
