[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
db.workspace = true
tokio = { version = "1", features = ["full"] }

axum = { version = "0.7.5", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tempfile = "3.2"
bytes = "1.0"
reqwest = { version = "0.12.4", features = ["multipart"] }
zip = "1.3.0"
walkdir = "2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
